添加蚂蚁动画的banner

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "demo",
-  "version": "1.0.1",
-  "description": "demo",
+  "name": "quanyin",
+  "version": "1.0.0",
+  "description": "广西南宁全银教育专业提供南宁越南语培训|南宁泰语培训|南宁日语培训|韩语|缅甸语|南宁柬埔寨语|印尼语|马来语|法语|德语|意大利语|西班牙语培训|英语等外语培训",
   "main": "index.js",
   "license": "MIT",
   "keywords": [],
-  "author": "czb_80@163.com",
+  "author": "liaohongze@163.com, czb_80@163.com",
   "scripts": {
     "start": "node server",
     "build": "rimraf ./dist && set NODE_ENV=production&& webpack --progress --hide-modules --profile --colors -p",
@@ -73,9 +73,13 @@
     "isomorphic-fetch": "^2.2.1",
     "moment": "^2.18.1",
     "prop-types": "^15.6.0",
+    "rc-banner-anim": "^1.0.1",
+    "rc-tween-one": "^1.7.3",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-transition-group": "^2.2.1",
